--- a/app/views/users/profile/_side_bar.html.erb
+++ b/app/views/users/profile/_side_bar.html.erb
@@ -7,7 +7,7 @@
       <% end %>
     </div>
     <div class='sub-text joined-date pl-3'>
-      Joined <%= @user.created_at.strftime('%B %e, %Y') %>
+      Total Distance: <%= number_with_delimiter(@user.total_distance) %> NM
     </div>
     <div class="m-3 bio">
       <%= simple_format(@user.bio) %>
@@ -118,7 +118,12 @@
         <p class="heading">RATINGS AND CERTIFICATIONS</p>
         <% if @user.ratings.count == 0 %>
           <div class="mt-2 mb-5">
-            <span class="text align-bottom">☹️ No ratings yet</span>
+            <span class="text align-bottom">
+              ☹️ No ratings yet
+              <% if @user == current_user %>
+                (<%= link_to( 'add yours', edit_user_registration_path(@user.username)) %>)
+              <% end %>
+            </span>
             <br>
           </div>
         <% else %>
