--- a/app/views/flights/_form.html.erb
+++ b/app/views/flights/_form.html.erb
@@ -72,19 +72,19 @@
           <div class="col-12 col-lg-3">
             <div class="mb-3">
               <%= form.label :total_time, 'Total Time (hours)', class: 'light-sub-text' %><br />
-              <%= form.number_field :total_time, id: :flight_total_time, class: 'form-control', step: 0.1 %>
+              <%= form.number_field :total_time, id: :flight_total_time, class: 'form-control', step: 0.1, value: form.object.total_time.round(1) %>
             </div>
           </div>
           <div class="col-12 col-lg-3">
             <div class="mb-3">
               <%= form.label :pic, 'PIC (hours)', class: 'light-sub-text' %><br />
-              <%= form.number_field :pic, id: :flight_pic, class: 'form-control', step: 0.1 %>
+              <%= form.number_field :pic, id: :flight_pic, class: 'form-control', step: 0.1, value: form.object.pic.round(1) %>
             </div>
           </div>
           <div class="col-12 col-lg-3">
             <div class="mb-3">
               <%= form.label :distance, 'Distance (nautical miles)', class: 'light-sub-text' %><br />
-              <%= form.number_field :distance, id: :flight_distance, class: 'form-control', step: 0.1 %>
+              <%= form.number_field :distance, id: :flight_distance, class: 'form-control', step: 0.1, value: form.object.distance.round(1)  %>
             </div>
           </div>
         </div>
