--- a/app/views/flights/index.html.erb
+++ b/app/views/flights/index.html.erb
@@ -89,7 +89,7 @@
                   <td><%= flight.time_in %></td>
                   <td><%= flight.total_time.try(:round, 1) %></td>
                   <td><%= flight.pic.try(:round, 1) %></td>
-                  <td><%= flight.distance %></td>
+                  <td><%= flight.distance.try(:round, 1).try(:round, 1) %></td>
                   <td><%= link_to 'Delete', flight, method: :delete, data: { confirm: 'Are you sure?' }, remote: true, class: 'delete_flight' %></td>
                   <td><%= link_to 'Edit', edit_flight_path(flight) %></td>
                 </tr>
@@ -138,7 +138,7 @@
               <td><%= flight.time_in %></td>
               <td><%= flight.total_time.try(:round, 1) %></td>
               <td><%= flight.pic.try(:round, 1) %></td>
-              <td><%= flight.distance %></td>
+              <td><%= flight.distance.try(:round, 1) %></td>
               <td><%= link_to 'Delete', flight, method: :delete, data: { confirm: 'Are you sure?' }, remote: true, class: 'delete_flight' %></td>
               <td><%= link_to 'Edit', edit_flight_path(flight) %></td>
             </tr>
