--- a/app/views/flights/index.html.erb
+++ b/app/views/flights/index.html.erb
@@ -11,6 +11,7 @@
       <div class="row">
         <div class="col-12">
           <%= link_to 'New Flight', new_flight_path %>
+          <%= link_to 'Delete All Flights', destroy_multiple_flights_path(flights: :all), method: :delete, data: { confirm: 'Are you sure? This will delete ALL YOUR FLIGHTS!' } %>
         </div>
       </div>
       <div class="row mt-2 mb-2">
@@ -19,7 +20,7 @@
         </div>
         <div class="col-12 col-md-6">
           <div class="float-right">
-            <%= form_with url: flight_search_path, method: :post, local: true do |f| %>
+            <%= form_with url: search_flights_path, method: :post, local: true do |f| %>
               <div class="form-inline">
                 <% if params[:query].present? %>
                   <%= link_to 'Reset Search', flights_path, class: 'mr-2' %>
