--- a/app/views/flights/index.html.erb
+++ b/app/views/flights/index.html.erb
@@ -10,8 +10,8 @@
       </div>
       <div class="row">
         <div class="col-12">
-          <%= link_to 'New Flight', new_flight_path %>
-          <%= link_to 'Delete All Flights', destroy_multiple_flights_path(flights: :all), method: :delete, data: { confirm: 'Are you sure? This will delete ALL YOUR FLIGHTS!' } %>
+          <%= link_to 'New Flight', new_flight_path %></br>
+          <%= link_to 'Delete All Flights', destroy_multiple_flights_path(flights: :all), method: :delete, data: { confirm: 'Are you sure? This will delete ALL YOUR FLIGHTS! Depending on how many flights you have, this could take a couple minutes.' } %>
         </div>
       </div>
       <div class="row mt-2 mb-2">
@@ -45,6 +45,9 @@
           </h4>
           <p>
             Cross check them with your logbook. If we're missing an identifier, send us <a href="http://m.me/arelplane" target="_blank">a message</a>. If you mistyped an identifier, just update the entry below, or fix it in your logbook and re-upload it.
+          </p>
+          <p>
+            Want to just delete all these flights? Click <%= link_to 'here', destroy_multiple_flights_path(flights: :broken), method: :delete, data: { confirm: 'Are you sure? This will delete ALL flights with missing identifiers!' } %>.
           </p>
 
           <button type="button" class="close" data-dismiss="alert" aria-label="Close">
