--- a/app/views/pages/_login_or_register_modal.html.erb
+++ b/app/views/pages/_login_or_register_modal.html.erb
@@ -10,7 +10,7 @@
       </div>
         <div class="modal-body">
           <div class="text-center">
-            <h3>Join Arelplane to like this Map.</h3>
+            <h3>Join Arelplane to follow this pilot.</h3>
           </div>
           <div class="text-center">
             <%= link_to "Register", new_user_registration_path, class: 'btn btn-primary' %>
