--- a/app/views/user_mailer/new_follower.html.erb
+++ b/app/views/user_mailer/new_follower.html.erb
@@ -1,6 +1,6 @@
 <p>Hey <%= @following.name %></p>
 
-<p><%= link_to @follower.name, username_url(@follower.username) %> just liked your map on <%= link_to 'Arelplane!', root_url %></p>
+<p><%= link_to @follower.name, username_url(@follower.username) %> just followed you on <%= link_to 'Arelplane!', root_url %></p>
 
 <p>Harry Bliss would be proud.</p>
 
@@ -9,5 +9,5 @@
 <br>
 <br>
 
-<p style="font-size: 8px !important;">If you no longer want to recieve notifications of new likes, <%= link_to 'unsubscribe here', unsubscribe_url(@following.subscription_preference.unsubscribe_token) %>.</p>
+<p style="font-size: 8px !important;">If you no longer want to recieve notifications of new followers, <%= link_to 'unsubscribe here', unsubscribe_url(@following.subscription_preference.unsubscribe_token) %>.</p>
 <p style="font-size: 8px !important;">If you don't want any emails about anything, ever, <%= link_to 'click here', unsubscribe_url(@following.subscription_preference.unsubscribe_token, unsubscribe_all: "true") %></p>
