--- a/app/views/users/profile/_share_button.html.erb
+++ b/app/views/users/profile/_share_button.html.erb
@@ -4,7 +4,7 @@
 
     <a target="_blank" href="mailto:?subject= Checkout my visual logbook &body=https://www.arelplane.com/<%= @user.username %>" class="buttons" tooltip="Share by Email"> <i class="fa fa-envelope"></i> </a>
 
-    <a target="_blank" href="https://www.linkedin.com/shareArticle?mini=true&url=https://www.arelplane.com/<%= @user.username %>" class="buttons" tooltip="Share on LikenIn"> <i class="fa fa-linkedin-square"></i> </a>
+    <a target="_blank" href="https://www.linkedin.com/shareArticle?mini=true&url=https://www.arelplane.com/<%= @user.username %>" class="buttons" tooltip="Share on LinkedIn"> <i class="fa fa-linkedin-square"></i> </a>
 
     <a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https://www.arelplane.com/<%= @user.username %>" class="buttons" tooltip="Share on Facebook"> <i class="fa fa-facebook"></i> </a>
   <% else %>
@@ -12,7 +12,7 @@
 
     <a target="_blank" href="mailto:?subject= Checkout my visual logbook &body=https://www.arelplane.com/users/<%= @user.id %>" class="buttons" tooltip="Share by Email"> <i class="fa fa-envelope"></i> </a>
 
-    <a target="_blank" href="https://www.linkedin.com/shareArticle?mini=true&url=https://www.arelplane.com/users/<%= @user.id %>" class="buttons" tooltip="Share on LikenIn"> <i class="fa fa-linkedin-square"></i> </a>
+    <a target="_blank" href="https://www.linkedin.com/shareArticle?mini=true&url=https://www.arelplane.com/users/<%= @user.id %>" class="buttons" tooltip="Share on LinkedIn"> <i class="fa fa-linkedin-square"></i> </a>
 
     <a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https://www.arelplane.com/users/<%= @user.id %>" class="buttons" tooltip="Share on Facebook"> <i class="fa fa-facebook"></i> </a>
   <% end %>
