--- a/app/views/flights/index.html.erb
+++ b/app/views/flights/index.html.erb
@@ -87,8 +87,8 @@
                     <% end %>
                   </td>
                   <td><%= flight.aircraft_identifier %></td>
-                  <td><%= Location.find(flight.from_id).name_and_identifier %></td>
-                  <td><%= Location.find(flight.to_id).name_and_identifier %></td>
+                  <td><%= Location.find(flight.origin_id).name_and_identifier %></td>
+                  <td><%= Location.find(flight.destination_id).name_and_identifier %></td>
                   <td><%= flight.time_out %></td>
                   <td><%= flight.time_in %></td>
                   <td><%= flight.total_time.try(:round, 1) %></td>
@@ -136,8 +136,8 @@
                 <% end %>
               </td>
               <td><%= flight.aircraft_identifier %></td>
-              <td><%= Location.find(flight.from_id).name_and_identifier %></td>
-              <td><%= Location.find(flight.to_id).name_and_identifier %></td>
+              <td><%= Location.find(flight.origin_id).name_and_identifier %></td>
+              <td><%= Location.find(flight.destination_id).name_and_identifier %></td>
               <td><%= flight.time_out %></td>
               <td><%= flight.time_in %></td>
               <td><%= flight.total_time.try(:round, 1) %></td>
