--- a/app/views/users/home_page/_all_users.html.erb
+++ b/app/views/users/home_page/_all_users.html.erb
@@ -1,8 +1,6 @@
 <% @feed.each do |post| %>
   <div class="card mb-4 feed_card">
-    <%#= image_tag 'demo-img.png', class: 'card-img-top', alt: 'Map image'%>
     <div class="card-body">
-      <span class="date"><%= time_ago_in_words(post.created_at) %> ago</span>
       <div class="row">
         <div class="col-lg-8 col-12">
           <h4 class="card-title name"><%= link_to post.user.name, username_path(post.user.username) %> <span class="flight-count">added <%= pluralize(number_with_delimiter(post.flights.count), "new flight") %> to their Map.</span></h4>
@@ -13,69 +11,30 @@
           </div>
         </div>
       </div>
+      <span class="date"><%= time_ago_in_words(post.created_at) %> ago</span>
+      <div class="row mt-3">
+        <div class="col-12">
+          <div class="description"><%= post.description %></div>
+        </div>
+      </div>
       <hr>
-      <div class="row text-center text-nowrap">
-        <div class="col-lg-2 col-3 stats">
-          <div class="row value">
-            <div class="col-12">
-              <%= number_with_delimiter(post.flights.count) %>
-            </div>
-          </div>
-          <div class="row heading">
-            <div class="col-12">
-              Flights
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-2 col-3 stats">
-          <div class="row value">
-            <div class="col-12">
-              <%= number_with_delimiter(post.num_airports) %>
-            </div>
-          </div>
-          <div class="row heading">
-            <div class="col-12">
-              Airports
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-2 col-3 stats">
-          <div class="row value">
-            <div class="col-12">
-              <%= number_with_delimiter(post.total_flight_hours) %>
-            </div>
-          </div>
-          <div class="row heading">
-            <div class="col-12">
-              Hours
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-2 col-3 stats">
-          <div class="row value">
-            <div class="col-12">
-              <%= number_with_delimiter(post.num_regions) %>
-            </div>
-          </div>
-          <div class="row heading">
-            <div class="col-12">
-              Regions
-            </div>
-          </div>
+      <div class="row airports">
+        <div class="col-12">
+          <% post.flights.each do |flight| %>
+            <%= flight.identifier %>
+          <% end %>
         </div>
       </div>
     </div>
     <ul class="list-group list-group-flush">
-      <%= link_to username_path(post.user.username) do %>
-        <li class="list-group-item link_section">
-          <span>
-            View their Map
-          </span>
-          <span class="float-right">
-            <%= image_tag 'icons/chevron_icon.png', width: 12, height: 10 %>
-          </span>
-        </li>
-      <% end %>
+      <li class="list-group-item link_section">
+        <span>
+          Like
+        </span>
+        <span class="float-right">
+          Comment
+        </span>
+      </li>
     </ul>
   </div>
 <% end %>
