fix unfinished code

--- a/app/views/users/home_page/_all_users.html.erb
+++ b/app/views/users/home_page/_all_users.html.erb
@@ -21,7 +21,7 @@
       <div class="row airports">
         <div class="col-12">
           <% post.flights.each do |flight| %>
-            <%= flight.identifier %>
+            <%#= flight.identifier %>
           <% end %>
         </div>
       </div>
