--- a/app/views/users/profile/_follow_button.html.erb
+++ b/app/views/users/profile/_follow_button.html.erb
@@ -3,7 +3,7 @@
     <%= f.hidden_field :following_id, value: user.id %>
     <div class="btn-group">
       <%= button_tag( class: "btn follow-button-normal") do %>
-        <%= image_tag "icons/heart_icon.png", height: '17', width: '19', class: 'mb-1' %><span> Follow</span>
+        <span>Follow</span>
       <% end %>
       <span class="btn follow-button-normal"><%= user.followers.count %></span>
     </div>
@@ -11,7 +11,7 @@
 <% else %>
 <div class="btn-group">
   <a href="#" data-toggle='modal' data-target='#loginOrRegisterModal' class="btn follow-button-normal">
-    <%= image_tag "icons/heart_icon.png", height: '17', width: '19', class: 'mb-1' %> Follow
+    Follow
   </a>
   <span class="btn follow-button-normal"><%= user.followers.count %></span>
 </div>
