--- a/app/views/stories/_likes.html.erb
+++ b/app/views/stories/_likes.html.erb
@@ -1,7 +1,7 @@
 <% if user_signed_in? && current_user.likes?(post) %>
-  <%= link_to "Unlike", feed_post_post_like_path(post), method: :delete, remote: true %>
+  <%= link_to "Unlike", story_like_path(post), method: :delete, remote: true %>
 <% else %>
-  <%= link_to "Like", feed_post_post_like_path(post), method: :post, remote: true %>
+  <%= link_to "Like", story_like_path(post), method: :post, remote: true %>
 <% end %>
 
 <%= post.likes.count %>
