--- a/app/views/stories/_likes.html.erb
+++ b/app/views/stories/_likes.html.erb
@@ -1,11 +1,11 @@
-<% if user_signed_in? && current_user.likes?(post) %>
-  <%= link_to "Unlike", story_like_path(post), method: :delete, remote: true %>
+<% if user_signed_in? && current_user.likes?(story) %>
+  <%= link_to "Unlike", story_like_path(story), method: :delete, remote: true %>
 <% else %>
-  <%= link_to "Like", story_like_path(post), method: :post, remote: true %>
+  <%= link_to "Like", story_like_path(story), method: :post, remote: true %>
 <% end %>
 
-<%= post.likes.count %>
+<%= story.likes.count %>
 
-<% post.likes.each do |like| %>
+<% story.likes.each do |like| %>
   <%= image_tag like.user.avatar_url, width: 20 %>
 <% end %>
