fix new comments getting appended to all stories

--- a/app/views/stories/comments/create.js.erb
+++ b/app/views/stories/comments/create.js.erb
@@ -1,1 +1,1 @@
-$(".comments").append("<%=j render 'stories/comment', comment: @comment %>");
+$("#comments_<%= @commentable.id %>").append("<%=j render 'stories/comment', comment: @comment %>");
