--- a/app/views/stories/_comment.html.erb
+++ b/app/views/stories/_comment.html.erb
@@ -1,3 +1,3 @@
-<div class="card bg-light p-2">
-  <%= comment.body %>
+<div class="card bg-light p-2 m-2">
+  <%= link_to comment.user.name, username_path(comment.user.username), class: 'username' %> <%= comment.body %>
 </div>
