--- a/app/views/stories/_comment.html.erb
+++ b/app/views/stories/_comment.html.erb
@@ -1,6 +1,7 @@
-<div class="card bg-light p-2 mt-2 mb-2">
+<div class="p-2 mt-2 mb-2">
   <div>
     <%= link_to comment.user.name, username_path(comment.user.username), class: 'username' %> <span class="timestamp ml-2"><%= time_ago_in_words(comment.created_at) %>
   </div>
   <%= comment.body %>
+  <hr>
 </div>
