--- a/app/views/stories/_comment_button.html.erb
+++ b/app/views/stories/_comment_button.html.erb
@@ -1,1 +1,3 @@
-<%= image_tag('icons/comment_icon.png', width: 19, height: 17) %> Comment
+<%= button_tag(type: "submit", class: "btn btn-default comment_button mb-1") do %>
+  <%= image_tag('icons/comment_icon.png', width: 19, height: 17) %> Comment
+<% end %>
