--- a/app/views/users/home_page/_all_users.html.erb
+++ b/app/views/users/home_page/_all_users.html.erb
@@ -30,8 +30,6 @@
         </div>
       </div>
     </div>
-    <!-- rewrite _likes.html.erb to look like mockup -->
-    <!-- update create.js.erb and destroy.js.erb to also update count on left hand side -->
     <div class="card-body social_actions">
       <div class="row">
         <div class="count col" id="like_count_<%= story.id %>">
@@ -47,25 +45,7 @@
         </div>
       </div>
     </div>
-    <div class="card-footer comments">
-      <div class="row">
-        <div class="col-12">
-          <div>
-            <div id="comments_<%= story.id %>">
-              <% story.comments.each do |comment| %>
-                <%= render 'stories/comment', comment: comment %>
-              <% end %>
-            </div>
-            <%= form_with model: [story, Comment.new], class: "new_comment" do |f| %>
-              <div class="form-group">
-                <%= f.text_area :body, class: 'form-control comment_text', placeholder: "Add a comment" %>
-                <%= f.submit class: 'btn btn-primary'%>
-              </div>
-            <% end %>
-          </div>
-        </div>
-      </div>
-    </div>
+    <%= render 'stories/comments_section', story: story %>
   </div>
 <% end %>
 
