--- a/app/views/stories/likes/destroy.js.erb
+++ b/app/views/stories/likes/destroy.js.erb
@@ -1,2 +1,2 @@
-$("#like_button_<%= @story.id %>").html("<%=j render 'stories/like_button', post: @story %>");
-$("#like_count_<%= @story.id %>").html("<%=j render 'stories/like_count', post: @story %>");
+$("#like_button_<%= @story.id %>").html("<%=j render 'stories/like_button', story: @story %>");
+$("#like_count_<%= @story.id %>").html("<%=j render 'stories/like_count', story: @story %>");
