adjust layout of comment/like button

--- a/app/assets/stylesheets/home_page.scss
+++ b/app/assets/stylesheets/home_page.scss
@@ -95,7 +95,7 @@
       .airports {
         .identifier {
           font-size: 1.5rem;
-          font-weight: $black;
+          font-weight: $regular;
           color: $primaryTextColor;
         }
         .region {
