--- a/app/views/stories/_comment_button.html.erb
+++ b/app/views/stories/_comment_button.html.erb
@@ -1,3 +1,3 @@
-<%= button_tag(type: "submit", class: "btn btn-default comment_button mb-1") do %>
-  <%= image_tag('icons/comment_icon.png', width: 19, height: 17) %> Comment
+<%= link_to '#', remote: true, class: "comment_button" do %>
+  <%= image_tag('icons/comment_icon.png', width: 19, height: 17) %><span> Comment</span>
 <% end %>
